add imageview i layout + justeret klasse ValegTablet

--- a/app/src/main/res/layout/activity_vaelg_scenarie.xml
+++ b/app/src/main/res/layout/activity_vaelg_scenarie.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/baggrund"
+    android:background="#bbdefb"
     tools:context=".activities.VaelgScenarieActivity">
 
     <android.support.constraint.ConstraintLayout
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_marginBottom="4dp"
-        android:background="#0d47a1"
-        app:layout_constraintBottom_toTopOf="@+id/linie"
+        android:background="#bbdefb"
+        app:layout_constraintBottom_toTopOf="@+id/fragmentScenarieContainer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -25,50 +25,47 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="4dp"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="sans-serif"
             android:maxLines="1"
             android:text="@string/vaelg_scenarie_overskrift"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            android:textColor="#FFF"
+            android:textColor="#42a5f5"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageButton
-            android:id="@+id/scenarieKnap"
-            style="@android:style/Widget.DeviceDefault.Button"
-            android:layout_width="134dp"
-            android:layout_height="66dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="4dp"
-            android:background="@color/colorAccent"
-            android:backgroundTintMode="src_atop"
-            android:elevation="4dp"
-            android:src="@drawable/plus"
-            android:tint="@android:color/white"
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/clplus"
+            android:layout_width="50dp"
+            android:layout_height="40dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toStartOf="@+id/tvVaelgTabletTitel"
+            app:layout_constraintHorizontal_bias="0.08"
+            app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/scenarieKnap"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="4dp"
+                android:background="#bbdefb"
+                android:scaleType="center"
+                android:src="@drawable/plus"
+                android:tint="@color/plusfg2"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.constraint.ConstraintLayout>
 
-    <View
-        android:id="@+id/linie2"
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="4dp"
-        android:background="#3366cc"
-        android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/fragmentScenarieContainer"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
 
     <FrameLayout
         android:id="@+id/fragmentScenarieContainer"
@@ -80,6 +77,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linie2" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
 
 </android.support.constraint.ConstraintLayout>
