--- a/app/src/main/res/layout/activity_vaelg_tablet.xml
+++ b/app/src/main/res/layout/activity_vaelg_tablet.xml
@@ -5,7 +5,7 @@
     android:id="@+id/clForbinTTablet"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/baggrund"
+    android:background="#bbdefb"
     android:keepScreenOn="true"
     tools:context=".activities.VaelgScenarieActivity">
 
@@ -14,8 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_marginBottom="4dp"
-        android:background="#0d47a1"
-        app:layout_constraintBottom_toTopOf="@+id/linie"
+        android:background="#bbdefb"
+        app:layout_constraintBottom_toTopOf="@+id/rvIndhold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -27,55 +27,37 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="4dp"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="sans-serif"
             android:maxLines="1"
             android:text="@string/Tablets"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            android:textColor="#FFFF"
+            android:textColor="#1e88e5"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/btnFunction"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/btnFunction"
-            style="@android:style/Widget.DeviceDefault.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="4dp"
-            android:background="@color/colorAccent"
+            android:background="#bbdefb"
             android:scaleType="center"
             android:src="@drawable/plus"
-            android:tint="@android:color/white"
+            android:tint="@color/element"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tvVaelgTabletTitel"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:tint="@android:color/white" />
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </android.support.constraint.ConstraintLayout>
-
-    <View
-        android:id="@+id/linie"
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="4dp"
-        android:background="#3366cc"
-        android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/rvIndhold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvIndhold"
@@ -87,7 +69,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linie"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
         app:layout_constraintVertical_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
