--- a/app/src/main/res/layout/adapter_vaelg_tablet.xml
+++ b/app/src/main/res/layout/adapter_vaelg_tablet.xml
@@ -4,6 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/tablet_liste_CL"
+    android:background="#64b5f6"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentStart="true"
@@ -71,27 +72,34 @@
         android:text="@string/tablet_liste_element_selog"
         android:textColor="#000"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/tablet_liste_element_slet"
+        app:layout_constraintEnd_toStartOf="@+id/clslet"
         app:layout_constraintStart_toEndOf="@+id/tablet_liste_element_valgBrugs"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <Button
-        android:id="@+id/tablet_liste_element_slet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/knap_kanter"
-        android:elevation="4dp"
-        android:text="@string/tablet_liste_element_slet"
-        android:textColor="#000"
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/clslet"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tablet_liste_element_selog"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent">
 
+    <ImageView
+        android:id="@+id/tablet_liste_element_slet"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="#64b5f6"
+        android:src="@drawable/delete"
+        android:tint="@android:color/white"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"    />
+        />
+
+</android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
