--- a/app/src/main/res/drawable/baggrund_tb.xml
+++ b/app/src/main/res/drawable/baggrund_tb.xml
@@ -5,7 +5,8 @@ android:shape="rectangle">
 <gradient
     android:angle="90"
     android:startColor="#bbccdd"
-    android:endColor="#fff"/>
+    android:centerColor="#bbccdd"
+    android:endColor="#bbccdd"/>
 
 
 </shape>
