--- a/app/src/main/res/layout/activity_vaelg_rolle.xml
+++ b/app/src/main/res/layout/activity_vaelg_rolle.xml
@@ -144,8 +144,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/knap_kanter"
-        android:text="?"
+        android:background="@drawable/knapbtncredits"
+        android:text="@string/spørgsmålstegn"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
