--- a/app/src/main/res/layout/adapter_vaelg_tablet.xml
+++ b/app/src/main/res/layout/adapter_vaelg_tablet.xml
@@ -35,7 +35,8 @@
         android:layout_marginBottom="8dp"
         android:gravity="center_vertical"
         android:textAllCaps="true"
-        android:textSize="26sp"
+        android:textColor="#FFFF"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tablet_liste_element_valgBrugs"
         app:layout_constraintStart_toEndOf="@+id/tablet_liste_element_LED"
@@ -49,15 +50,14 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/knap_kanter"
-        android:elevation="4dp"
+        android:background="#64b5f6"
         android:text="@string/tablet_liste_element_valgBrugs"
-        android:textColor="#000"
+        android:textColor="#FFFF"
+        android:textAppearance="@android:style/TextAppearance.Material.Small"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tablet_liste_element_selog"
         app:layout_constraintStart_toEndOf="@+id/tablet_liste_element_ID"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/tablet_liste_element_selog"
@@ -67,15 +67,14 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/knap_kanter"
-        android:elevation="4dp"
+        android:background="#64b5f6"
         android:text="@string/tablet_liste_element_selog"
-        android:textColor="#000"
+        android:textColor="#FFFF"
+        android:textAppearance="@android:style/TextAppearance.Material.Small"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/clslet"
         app:layout_constraintStart_toEndOf="@+id/tablet_liste_element_valgBrugs"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <android.support.constraint.ConstraintLayout
