rettelser adapter xml + adapter klasser

--- a/app/src/main/res/layout/adapter_send_scenarie.xml
+++ b/app/src/main/res/layout/adapter_send_scenarie.xml
@@ -4,7 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#64b5f6">
 
 
     <TextView
@@ -17,27 +18,38 @@
         android:layout_marginBottom="8dp"
         android:textAlignment="viewStart"
         android:textAllCaps="true"
-        android:textSize="24sp"
+        android:textColor="#FFF"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/addBrugs"
+        app:layout_constraintEnd_toStartOf="@+id/clslet"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/addBrugs"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/knap_kanter"
-        android:text="@string/adapter_peer_send"
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/clslet"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/navnSenarie"
+        app:layout_constraintTop_toTopOf="parent">
+
+    <ImageView
+        android:id="@+id/addBrugs"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="#64b5f6"
+        android:src="@drawable/delete"
+        android:tint="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+
+    </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
 
