--- a/app/src/main/res/layout/adapter_vaelg_scenarie.xml
+++ b/app/src/main/res/layout/adapter_vaelg_scenarie.xml
@@ -30,9 +30,11 @@
             android:layout_marginBottom="8dp"
             android:gravity="center_vertical|start"
             android:text="@string/scenarie_dummy_navn"
+            android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            android:textSize="20sp"
             android:textColor="#FFF"
+            android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/constraintLayout6"
             app:layout_constraintStart_toStartOf="@+id/CL2"
