--- a/app/src/main/res/layout/activity_vaelg_scenarie.xml
+++ b/app/src/main/res/layout/activity_vaelg_scenarie.xml
@@ -10,7 +10,7 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="57dp"
         android:layout_marginBottom="4dp"
         android:background="#bbdefb"
         app:layout_constraintBottom_toTopOf="@+id/fragmentScenarieContainer"
@@ -70,9 +70,10 @@
     <FrameLayout
         android:id="@+id/fragmentScenarieContainer"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="309dp"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/baggrund"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
