--- a/app/src/main/res/layout/adapter_vaelg_scenarie.xml
+++ b/app/src/main/res/layout/adapter_vaelg_scenarie.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/listeElement"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -9,7 +9,7 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/CL2"
         android:layout_width="732dp"
-        android:layout_height="wrap_content"
+        android:layout_height="59dp"
         android:layout_marginStart="2dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="2dp"
