--- a/app/src/main/res/layout/adapter_vaelg_tablet.xml
+++ b/app/src/main/res/layout/adapter_vaelg_tablet.xml
@@ -5,12 +5,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/tablet_liste_CL"
     android:background="#64b5f6"
-    android:layout_width="match_parent"
+    android:layout_width="732dp"
     android:layout_height="wrap_content"
+    android:layout_marginStart="2dp"
+    android:layout_marginTop="2dp"
+    android:layout_marginEnd="2dp"
+    android:layout_marginBottom="2dp"
     android:layout_alignParentStart="true"
-    android:layout_alignParentTop="true"
-    android:layout_marginStart="0dp"
-    android:layout_marginTop="0dp">
+    android:layout_alignParentTop="true">
+
+
 
     <gruppe98.dtu.dk.gr098_simulatortilkirurgisktraening.views.LEDView
         android:id="@+id/tablet_liste_element_LED"
@@ -52,8 +56,8 @@
         android:layout_marginBottom="8dp"
         android:background="#64b5f6"
         android:text="@string/tablet_liste_element_valgBrugs"
-        android:textColor="#FFFF"
         android:textAppearance="@android:style/TextAppearance.Material.Small"
+        android:textColor="#FFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tablet_liste_element_selog"
         app:layout_constraintStart_toEndOf="@+id/tablet_liste_element_ID"
