--- a/app/src/main/res/layout/adapter_peer.xml
+++ b/app/src/main/res/layout/adapter_peer.xml
@@ -2,7 +2,12 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginStart="2dp"
+    android:layout_marginTop="2dp"
+    android:layout_marginEnd="2dp"
+    android:layout_marginBottom="2dp"
+    android:background="#64b5f6">
 
     <Button
         android:id="@+id/btnForbind"
@@ -12,9 +17,10 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/knap_kanter"
-        android:elevation="4dp"
+        android:background="#64b5f6"
         android:text="@string/adapter_peer_forbind"
+        android:textColor="#FFFF"
+        android:textAppearance="@android:style/TextAppearance.Material.Small"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvName"
@@ -30,7 +36,8 @@
         android:layout_marginBottom="8dp"
         android:text="NAME"
         android:textAlignment="viewStart"
-        android:textAllCaps="true"
+        android:textAllCaps="false"
+        android:textColor="#FFFF"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnForbind"
