--- a/app/src/main/res/layout/adapter_vaelg_scenarie.xml
+++ b/app/src/main/res/layout/adapter_vaelg_scenarie.xml
@@ -4,7 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/listeElement"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginStart="2dp"
+    android:layout_marginTop="2dp"
+    android:layout_marginEnd="2dp"
+    android:layout_marginBottom="2dp">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/CL2"
@@ -24,10 +28,6 @@
             android:id="@+id/scenarie_navn"
             android:layout_width="573dp"
             android:layout_height="54dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginBottom="8dp"
             android:gravity="center_vertical|start"
             android:text="@string/scenarie_dummy_navn"
             android:textAllCaps="true"
