--- a/app/src/main/res/layout/adapter_send_scenarie.xml
+++ b/app/src/main/res/layout/adapter_send_scenarie.xml
@@ -6,7 +6,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/listeelementtabletCL"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="4dp"
+    android:layout_marginBottom="8dp">
 
 
     <android.support.constraint.ConstraintLayout
