--- a/app/src/main/res/layout/activity_vaelg_tablet.xml
+++ b/app/src/main/res/layout/activity_vaelg_tablet.xml
@@ -5,17 +5,14 @@
     android:id="@+id/clForbinTTablet"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#bbdefb"
     android:keepScreenOn="true"
     tools:context=".activities.VaelgScenarieActivity">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_marginBottom="4dp"
+        android:layout_height="wrap_content"
         android:background="#bbdefb"
-        app:layout_constraintBottom_toTopOf="@+id/rvIndhold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -63,13 +60,12 @@
         android:id="@+id/rvIndhold"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
 
 </android.support.constraint.ConstraintLayout>
